--- a/src/index.css
+++ b/src/index.css
@@ -85,6 +85,14 @@ body {
 	color: #82152B; 
 }
 
+.Page-Title2 {
+	position: relative; width: 100%;
+	margin: auto ;
+	padding: 130px 20px 0 20px;
+	font-size: 30px;
+	 box-sizing: border-box;
+}
+
 .Page-Title {
 	position: relative; width: 100%;
 	margin: auto ;
